syntax = "proto3";

package sync;

service SyncSvc {

  rpc Ping(PingRequest) returns (PingResponse) {}

  rpc List(ListRequest) returns (ListResponse) {}

  rpc Add(AddRequest) returns (AddResponse) {}

  rpc Remove(RemoveRequest) returns (RemoveResponse) {}

  rpc Register(RegisterRequest) returns (RegisterResponse) {}

}

message SyncData {
  string md5 = 1;
  int32 create_time = 2;
}

message PingRequest {
}

message PingResponse {
  string msg = 1;
}

message ListRequest {
}

message ListResponse {
  repeated SyncData data = 1;
}

message AddRequest {
  SyncData data = 1;
}

message AddResponse {}

message RemoveRequest {
  SyncData data = 1;
}

message RemoveResponse {}

message RegisterRequest {
  string connect_addr = 1;
}

message RegisterResponse {
  repeated SyncData data = 1;
}
